base/django-test-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: django-test
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: django-test-fargate
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
